--- a/src/app/pages/lecturer/lectview-quizzes/lectview-quizzes.component.html
+++ b/src/app/pages/lecturer/lectview-quizzes/lectview-quizzes.component.html
@@ -5,7 +5,7 @@
       <mat-icon>quiz</mat-icon>
       Quiz Management
     </h1>
-    <button mat-raised-button color="primary" routerLink="/lect/add-quiz" class="add-quiz-btn">
+    <button mat-raised-button color="primary" routerLink="/lect/add-quizes" class="add-quiz-btn">
       <mat-icon>add</mat-icon>
       Add New Quiz
     </button>
@@ -22,7 +22,7 @@
       <p class="empty-state-description">
         You haven't created any quizzes. Start by adding your first quiz.
       </p>
-      <button mat-raised-button color="primary" routerLink="/lect/add-quiz">
+      <button mat-raised-button color="primary" routerLink="/lect/add-quizes">
         <mat-icon>add</mat-icon>
         Create First Quiz
       </button>
