--- a/src/app/pages/admin/view-categories/view-categories.component.css
+++ b/src/app/pages/admin/view-categories/view-categories.component.css
@@ -282,4 +282,10 @@ mat-form-field {
   .elegant-table td {
     padding: 12px 8px;
   }
+
+
+.assign-item{
+  font-size: 24px;
+  color: #f44336;
+  }
 }
