Added lecturer reister endpoint

--- a/src/app/pages/admin/view-categories/view-categories.component.html
+++ b/src/app/pages/admin/view-categories/view-categories.component.html
@@ -4,7 +4,7 @@
 
 {{category| json}} -->
 
-{{categories|json}}
+<!-- {{categories|json}} -->
 
 <mat-card class="elevated-card">
   <mat-card-header class="card-header">
