--- a/src/app/pages/admin/students/students.component.html
+++ b/src/app/pages/admin/students/students.component.html
@@ -175,7 +175,7 @@
           </mat-form-field>
 
             <mat-form-field appearance="outline" floatLabel="always">
-            <mat-label>Username</mat-label>
+            <mat-label>Index Number</mat-label>
             <input matInput [(ngModel)]="studentEdit.username" name="username" required>
           </mat-form-field>
         </div>
