--- a/src/app/pages/admin/students/students.component.html
+++ b/src/app/pages/admin/students/students.component.html
@@ -148,7 +148,7 @@
   <div class="dialog-container">
     <div class="dialog-header">
       <mat-icon class="dialog-icon">edit_note</mat-icon>
-      <h1 mat-dialog-title>Update Lecturer Details</h1>
+      <h1 mat-dialog-title>Update Student Details</h1>
     </div>
 
     <mat-divider></mat-divider>
@@ -207,7 +207,7 @@
         <mat-icon>close</mat-icon>
         Cancel
       </button>
-      <button mat-raised-button color="primary" (click)="updateCategoryData()" class="save-btn">
+      <button mat-raised-button color="primary" (click)="updatestudent()" class="save-btn">
         <mat-icon>save</mat-icon>
         Update
       </button>
