Added lecturer reister endpoint

--- a/src/app/pages/admin/lecturers/lecturers.component.html
+++ b/src/app/pages/admin/lecturers/lecturers.component.html
@@ -1,5 +1,5 @@
 
-<!-- {{students | json}} -->
+<!-- {{lecturers | json}} -->
 <mat-card class="elevated-card">
   <mat-card-header class="card-header">
     <div class="header-content">
@@ -83,7 +83,7 @@
                 <span>Edit Lecturer</span>
               </button>
               <mat-divider></mat-divider>
-              <button mat-menu-item (click)="deleteStudent(element.id)" class="menu-item delete-item">
+              <button mat-menu-item (click)="deleteLecturer(element.id)" class="menu-item delete-item">
                 <mat-icon class="menu-icon">delete</mat-icon>
                 <span>Delete</span>
               </button>
