Added lecturer reister endpoint

--- a/src/app/pages/admin/lecturers/lecturers.component.html
+++ b/src/app/pages/admin/lecturers/lecturers.component.html
@@ -262,7 +262,7 @@
 
         <mat-form-field appearance="fill">
           <mat-label>Default Password</mat-label>
-          <input matInput formControlName="defaultpassword">
+          <input matInput formControlName="password">
         </mat-form-field>
 
         <!-- <mat-form-field appearance="fill">
