Added lecturer reister endpoint

--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -1,6 +1,9 @@
 <!-- {{currentQuestions|json}}
 
 {{ qid| json}} -->
+
+{{totalTime() | json}}
+
 <div class="bootstrap-wrapper">
     <!-- Loading Spinner -->
     <div *ngIf="isLoading" class="loading-overlay">
